Update info, search (Fix UI Overflow)

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -53,6 +53,27 @@ h2 {
   height: 100%;
 }
 
+.scrollable {
+  max-height: 400px; /* Adjust height as needed */
+  overflow-y: auto;
+  padding-right: 10px; /* Optional: To avoid hiding content behind scrollbar */
+}
+
+/* Optional: Additional styles for the scroll bar */
+.scrollable::-webkit-scrollbar {
+  width: 8px;
+}
+
+.scrollable::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
+}
+
+.scrollable::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+
 .modal {
   position: fixed;
   top: 0;
